Terminando de agregar contenido a la página web.

--- a/acercade.html
+++ b/acercade.html
@@ -47,7 +47,125 @@
       </nav>
       <hr />
       <h1 class="text-center">QUIÉNES SOMOS</h1>
+      <br />
+      <h2 id="quienesomos">Sobres Nosotros</h2>
+      <p>
+        En <span class="wankadev-highlight">WankaDev</span>, somos una comunidad
+        de programadores apasionados que busca conectar a desarrolladores en el
+        país. Nuestro objetivo es crear un espacio donde los profesionales de la
+        tecnología puedan informarse, aprender nuevos conocimientos y que puedan
+        crecer su red de contacto mediante los eventos de la tecnología.
+      </p>
+      <br />
+      <img src="img/acercade.avif" class="article-image" />
+      <br />
+      <h2 id="valores">Nuestros Valores</h2>
+      <p>
+        Nos guiamos por el compromiso, el aprendizaje continuo, la inclusión y
+        el respeto. Creemos que al compartir recursos y experiencias, podemos
+        construir una comunidad más fuerte y capacitada.
+      </p>
+      <br />
+      <img src="img/valores.avif" class="article-image" />
+      <br />
+      <h2 id="proposito">Nuestro Propósito</h2>
+      <p>
+        El propósito de <span class="wankadev-highlight">WankaDev</span> es
+        facilitar el acceso a recursos gratuitos y oportunidades de aprendizaje
+        para programadores, promoviendo el networking y el aprendizaje
+        autodidacta en un entorno de apoyo. Además, nos enfocamos en informar
+        sobre eventos relevantes en el ámbito de la programación y la
+        tecnología.
+      </p>
+      <br />
+      <img src="img/proposito.avif" class="article-image" />
+      <br />
+      <h2 id="vision">Nuestra Visión</h2>
+      <p>
+        Aspiramos a ser la red de referencia para programadores en el país,
+        donde cada miembro pueda encontrar oportunidades de desarrollo personal
+        y profesional.
+      </p>
+      <br />
+      <img src="img/vision.avif" class="article-image" />
+      <br />
+      <h2 id="mision">Nuestra Misión</h2>
+      <p>
+        Nuestra misión es informar sobre eventos, cursos, artículos, noticias y
+        meetups que fomenten el intercambio de conocimientos y experiencias
+        entre programadores, ayudando a cada individuo a alcanzar su máximo
+        potencial.
+      </p>
+      <br />
+      <img src="img/mision.avif" class="article-image" />
+      <br />
+      <h2 id="aspiraciones">Nuestras Aspiraciones</h2>
+      <p>
+        Nos esforzamos por expandir nuestra red, conectando a programadores de
+        diferentes niveles y especialidades, y brindando un espacio donde todos
+        puedan aprender, crecer y estar al tanto de los eventos más relevantes
+        en la comunidad tecnológica.
+      </p>
+      <br />
+      <img src="img/aspiraciones.avif" class="article-image" />
+      <br />
+      <a href="index.html" class="btn-return">
+        <i class="fas fa-arrow-left"></i> Volver a Inicio
+      </a>
     </div>
+    <div class="footer-links">
+      <div class="footer-container">
+        <ul>
+          <li>
+            <a href="recursos.html"><h3>Tecnologías</h3></a>
+          </li>
+          <li><a href="recursos.html#html-curso">HTML</a></li>
+          <li><a href="articulos.html#css4-5">CSS</a></li>
+          <li><a href="recursos.html#js-curso">JavaScript</a></li>
+          <li><a href="recursos.html#samsung-curso">Samsung</a></li>
+          <li><a href="recursos.html#flutter-curso">Flutter</a></li>
+          <li><a href="recursos.html#nodejs-curso">NodeJS</a></li>
+        </ul>
+        <ul>
+          <li>
+            <a href="noticias.html"><h3>Noticias</h3></a>
+          </li>
+          <li><a href="noticias.html#internetarchive">Hackeo a Internet</a></li>
+          <li><a href="noticias.html#google-espia">Google te espía</a></li>
+          <li>
+            <a href="noticias.html#google-adblock">Google borra Adblockers</a>
+          </li>
+          <li><a href="noticias.html#windows10">Windows 10 morirá</a></li>
+          <li><a href="noticias.html#HarmonyOS">HarmonyOS Next</a></li>
+          <li><a href="noticias.html#Firefox">Firefox y su seguridad</a></li>
+        </ul>
+        <ul>
+          <li>
+            <a href="contacto.html"><h3>Contacto</h3></a>
+          </li>
+          <li><a href="contacto.html">Conócenos</a></li>
+          <li><a href="contacto.html">Facebook</a></li>
+          <li><a href="contacto.html">Youtube</a></li>
+          <li><a href="contacto.html">Linkedln</a></li>
+          <li><a href="contacto.html">Teléfono</a></li>
+          <li><a href="contacto.html">Instagram</a></li>
+        </ul>
+        <ul>
+          <li>
+            <a href="acercade.html"><h3>Acerca De</h3></a>
+          </li>
+          <li><a href="acercade.html#quienesomos">Quiénes Somos</a></li>
+          <li><a href="acercade.html#valores">Nuestros Valores</a></li>
+          <li><a href="acercade.html#proposito">Nuestro Propósito</a></li>
+          <li><a href="acercade.html#vision">Nuestra Visión</a></li>
+          <li><a href="acercade.html#mision">Nuestra Misión</a></li>
+          <li>
+            <a href="acercade.html#aspiraciones">Nuestras Aspiraciones</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <footer class="footer"><h3>WankaDev Copyright</h3></footer>
     <!-- SCROLL REVEAL (JAVASCRIPT) -->
     <script src="https://unpkg.com/scrollreveal"></script>
     <!-- CUSTOM JS -->
