--- a/contacto.html
+++ b/contacto.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>contacto - WankaDev</title>
+    <title>Contacto - WankaDev</title>
     <!-- FONT AWESOME (BOOTSTRAP) -->
     <link
       rel="stylesheet"
@@ -47,7 +47,79 @@
       </nav>
       <hr />
       <h1 class="text-center">CONTÁCTANOS</h1>
+      <div class="contact-section">
+        <h2>Contacto</h2>
+        <a href="https://www.facebook.com/luccianovivass" target="_blank"
+          >Facebook</a
+        >
+        <a href="https://www.youtube.com/@maxicodifique" target="_blank"
+          >YouTube</a
+        >
+        <a href="https://www.linkedin.com/in/lumaxiviba/" target="_blank"
+          >LinkedIn</a
+        >
+        <a href="tel:+51943679823">Teléfono: +51943679823</a>
+        <a href="https://www.instagram.com/lucciano.0/" target="_blank"
+          >Instagram</a
+        >
+      </div>
+      <a href="index.html" class="btn-return">
+        <i class="fas fa-arrow-left"></i> Volver a Inicio
+      </a>
     </div>
+    <div class="footer-links">
+      <div class="footer-container">
+        <ul>
+          <li>
+            <a href="recursos.html"><h3>Tecnologías</h3></a>
+          </li>
+          <li><a href="recursos.html#html-curso">HTML</a></li>
+          <li><a href="articulos.html#css4-5">CSS</a></li>
+          <li><a href="recursos.html#js-curso">JavaScript</a></li>
+          <li><a href="recursos.html#samsung-curso">Samsung</a></li>
+          <li><a href="recursos.html#flutter-curso">Flutter</a></li>
+          <li><a href="recursos.html#nodejs-curso">NodeJS</a></li>
+        </ul>
+        <ul>
+          <li>
+            <a href="noticias.html"><h3>Noticias</h3></a>
+          </li>
+          <li><a href="noticias.html#internetarchive">Hackeo a Internet</a></li>
+          <li><a href="noticias.html#google-espia">Google te espía</a></li>
+          <li>
+            <a href="noticias.html#google-adblock">Google borra Adblockers</a>
+          </li>
+          <li><a href="noticias.html#windows10">Windows 10 morirá</a></li>
+          <li><a href="noticias.html#HarmonyOS">HarmonyOS Next</a></li>
+          <li><a href="noticias.html#Firefox">Firefox y su seguridad</a></li>
+        </ul>
+        <ul>
+          <li>
+            <a href="contacto.html"><h3>Contacto</h3></a>
+          </li>
+          <li><a href="contacto.html">Conócenos</a></li>
+          <li><a href="contacto.html">Facebook</a></li>
+          <li><a href="contacto.html">Youtube</a></li>
+          <li><a href="contacto.html">Linkedln</a></li>
+          <li><a href="contacto.html">Teléfono</a></li>
+          <li><a href="contacto.html">Instagram</a></li>
+        </ul>
+        <ul>
+          <li>
+            <a href="acercade.html"><h3>Acerca De</h3></a>
+          </li>
+          <li><a href="acercade.html#quienesomos">Quiénes Somos</a></li>
+          <li><a href="acercade.html#valores">Nuestros Valores</a></li>
+          <li><a href="acercade.html#proposito">Nuestro Propósito</a></li>
+          <li><a href="acercade.html#vision">Nuestra Visión</a></li>
+          <li><a href="acercade.html#mision">Nuestra Misión</a></li>
+          <li>
+            <a href="acercade.html#aspiraciones">Nuestras Aspiraciones</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <footer class="footer"><h3>WankaDev Copyright</h3></footer>
     <!-- SCROLL REVEAL (JAVASCRIPT) -->
     <script src="https://unpkg.com/scrollreveal"></script>
     <!-- CUSTOM JS -->
