--- a/eventos.html
+++ b/eventos.html
@@ -47,7 +47,7 @@
       </nav>
       <hr />
       <h1 class="text-center">EVENTOS DEV</h1>
-      <div class="box-article" id="internetarchive">
+      <div class="box-article" id="devfest2024">
         <img
           src="img/devfestportada.webp"
           alt="DevFest Huancayo 2024"
@@ -57,22 +57,120 @@
         <p class="article-description">
           DevFest Huancayo es el encuentro tecnológico más esperado del año,
           organizado por la comunidad Google Developer Group (GDG) de Huancayo.
+          <br /><br />
           En este evento, tendrás la oportunidad de sumergirte en las últimas
           novedades del mundo del desarrollo y las tecnologías emergentes, todo
           bajo el paraguas de las soluciones y plataformas de Google. Ya seas un
           desarrollador experimentado, un estudiante con pasión por la
           tecnología o un emprendedor buscando inspiración, DevFest Huancayo es
-          el lugar para ti. Con una combinación de charlas magistrales, talleres
-          prácticos y espacios para networking, podrás conectar con
-          profesionales del sector, compartir ideas y expandir tus horizontes.
-          ¡Únete a nosotros en DevFest Huancayo y sé parte de la innovación
-          tecnológica en nuestra región!
+          el lugar para ti.
+          <br /><br />
+          Con una combinación de charlas magistrales, talleres prácticos y
+          espacios para networking, podrás conectar con profesionales del
+          sector, compartir ideas y expandir tus horizontes. ¡Únete a nosotros
+          en DevFest Huancayo y sé parte de la innovación tecnológica en nuestra
+          región!
           <br />
           <br />
-          <a href="https://devfest.huancayo.dev/"> <b>Inscríbete aquí </b> </a>
+          <a href="https://devfest.huancayo.dev/" target="_blank">
+            <b>Inscríbete aquí </b>
+          </a>
         </p>
       </div>
+      <a href="index.html" class="btn-return">
+        <i class="fas fa-arrow-left"></i> Volver a Inicio
+      </a>
+      <div class="box-article" id="CiberSecConf2024">
+        <img
+          src="img/CiberSecConf2024.jfif"
+          alt="CiberSecConf 2024"
+          class="article-image"
+        />
+        <h3 class="article-title">CiberSecConf 2024</h3>
+        <p class="article-description">
+          CiberSecConf 2024: Inka 2077 es la conferencia anual organizada por
+          CiberSecUNI, una comunidad dedicada a la ciberseguridad en Perú y
+          Latinoamérica. Este evento reúne a expertos, estudiantes y entusiastas
+          para explorar los últimos avances en ciberseguridad, hacking ético y
+          defensa cibernética.
+          <br /><br />
+          Con actividades que incluyen charlas, talleres, competencias de
+          hacking (CTF), y sesiones de networking, CiberSecConf es el espacio
+          ideal para conectar, aprender y contribuir al crecimiento del
+          ecosistema de ciberseguridad. La edición 2024 se centrará en la
+          temática "Inka 2077", combinando tecnología, cultura e innovación en
+          un formato dinámico y educativo.
+          <br /><br />
+          El evento tendrá lugar el 30 de noviembre de 2024 en la Universidad
+          Nacional de Ingeniería, con actividades virtuales del 24 al 29 de
+          noviembre.
+          <br />
+          <br />
+          <a
+            href="https://www.eventbrite.com.pe/e/cibersecconf-2024-tickets-1009021078207"
+            target="_blank"
+          >
+            <b>Inscríbete aquí </b>
+          </a>
+        </p>
+      </div>
+      <a href="index.html" class="btn-return">
+        <i class="fas fa-arrow-left"></i> Volver a Inicio
+      </a>
     </div>
+    <div class="footer-links">
+      <div class="footer-container">
+        <ul>
+          <li>
+            <a href="recursos.html"><h3>Tecnologías</h3></a>
+          </li>
+          <li><a href="recursos.html#html-curso">HTML</a></li>
+          <li><a href="articulos.html#css4-5">CSS</a></li>
+          <li><a href="recursos.html#js-curso">JavaScript</a></li>
+          <li><a href="recursos.html#samsung-curso">Samsung</a></li>
+          <li><a href="recursos.html#flutter-curso">Flutter</a></li>
+          <li><a href="recursos.html#nodejs-curso">NodeJS</a></li>
+        </ul>
+        <ul>
+          <li>
+            <a href="noticias.html"><h3>Noticias</h3></a>
+          </li>
+          <li><a href="noticias.html#internetarchive">Hackeo a Internet</a></li>
+          <li><a href="noticias.html#google-espia">Google te espía</a></li>
+          <li>
+            <a href="noticias.html#google-adblock">Google borra Adblockers</a>
+          </li>
+          <li><a href="noticias.html#windows10">Windows 10 morirá</a></li>
+          <li><a href="noticias.html#HarmonyOS">HarmonyOS Next</a></li>
+          <li><a href="noticias.html#Firefox">Firefox y su seguridad</a></li>
+        </ul>
+        <ul>
+          <li>
+            <a href="contacto.html"><h3>Contacto</h3></a>
+          </li>
+          <li><a href="contacto.html">Conócenos</a></li>
+          <li><a href="contacto.html">Facebook</a></li>
+          <li><a href="contacto.html">Youtube</a></li>
+          <li><a href="contacto.html">Linkedln</a></li>
+          <li><a href="contacto.html">Teléfono</a></li>
+          <li><a href="contacto.html">Instagram</a></li>
+        </ul>
+        <ul>
+          <li>
+            <a href="acercade.html"><h3>Acerca De</h3></a>
+          </li>
+          <li><a href="acercade.html#quienesomos">Quiénes Somos</a></li>
+          <li><a href="acercade.html#valores">Nuestros Valores</a></li>
+          <li><a href="acercade.html#proposito">Nuestro Propósito</a></li>
+          <li><a href="acercade.html#vision">Nuestra Visión</a></li>
+          <li><a href="acercade.html#mision">Nuestra Misión</a></li>
+          <li>
+            <a href="acercade.html#aspiraciones">Nuestras Aspiraciones</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <footer class="footer"><h3>WankaDev Copyright</h3></footer>
     <!-- SCROLL REVEAL (JAVASCRIPT) -->
     <script src="https://unpkg.com/scrollreveal"></script>
     <!-- CUSTOM JS -->
