--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
             últimas tendencias en desarrollo y tecnologías de Google en un
             evento lleno de sorpresas.
           </p>
-          <a href="#">Leer más <i class="fas fa-angle-double-right"></i></a>
+          <a href="eventos.html#devfest2024"
+            >Leer más <i class="fas fa-angle-double-right"></i
+          ></a>
         </div>
         <div>
           <img
@@ -91,7 +93,9 @@
             Se basa en la aplicación de técnicas sencillas con las que generamos
             un código claro e intuitivo que es más fácil de modificar.
           </p>
-          <a href="#">Leer más <i class="fas fa-angle-double-right"></i></a>
+          <a href="articulos.html#clean-code"
+            >Leer más <i class="fas fa-angle-double-right"></i
+          ></a>
         </div>
 
         <div>
@@ -101,9 +105,12 @@
             Inka 2077 es la conferencia anual organizada por CiberSecUNI, una
             comunidad dedicada a la ciberseguridad en Perú y Latinoamérica.
           </p>
-          <a href="#">Leer más <i class="fas fa-angle-double-right"></i></a>
+          <a href="eventos.html#CiberSecConf2024"
+            >Leer más <i class="fas fa-angle-double-right"></i
+          ></a>
         </div>
       </div>
+      <!-- CARDS BANNER ONE  -->
       <section class="cards-banner-one">
         <div class="content">
           <h2>¡Los nuevos eventos ya están aquí!</h2>
@@ -111,7 +118,7 @@
             Descubre que nuevos eventos tecnológicos te esperan en la región y
             en el Perú.
           </p>
-          <a href="#" class="btn"
+          <a href="eventos.html" class="btn"
             >Leer Más <i class="fas fa-angle-double-right"></i
           ></a>
         </div>
@@ -126,13 +133,13 @@
             plataforma Web.dev de Google, cuenta con la experiencia de tutores
             avanzados.
           </p>
-          <a href="noticias.html#google-espia"
+          <a href="recursos.html#html-curso"
             >Leer más <i class="fas fa-angle-double-right"></i
           ></a>
         </div>
         <div>
           <img src="./img/googleincognito.avif" alt="Google Espía" />
-          <h3>Googlete espía al navegar en Chrome con modo incógnito</h3>
+          <h3>Google te espía al navegar en Chrome con modo incógnito</h3>
           <p>
             Sí, Google confirma lo que todos sabíamos: te espía cuando usas el
             Modo Incógnito y fué multada con 5.100 millones de euros, ¿Estás
@@ -151,7 +158,9 @@
             nuevas versiones prometen simplicar y potenciar la web para todos
             los usuarios.
           </p>
-          <a href="#">Leer más <i class="fas fa-angle-double-right"></i></a>
+          <a href="articulos.html#css4-5"
+            >Leer más <i class="fas fa-angle-double-right"></i
+          ></a>
         </div>
         <div>
           <img src="./img/samsung.webp" alt="cursos por Samsung" />
@@ -161,9 +170,12 @@
             línea gratuita que aborda conceptos esenciales de la Internet de las
             Cosas (IoT), programación y electrónica.
           </p>
-          <a href="#">Leer más <i class="fas fa-angle-double-right"></i></a>
+          <a href="recursos.html#samsung-curso"
+            >Leer más <i class="fas fa-angle-double-right"></i
+          ></a>
         </div>
       </div>
+      <!-- CARDS BANNER TWO -->
       <section class="cards-banner-two">
         <div class="content">
           <h2>¡Los mejores cursos ya están aquí!</h2>
@@ -171,7 +183,7 @@
             Descubre la mejor información acerca de las capacitaciones y cursos
             que potenciarán tu CV y Portafolio; lo mejor de todo, son GRATIS.
           </p>
-          <a href="#" class="btn"
+          <a href="recursos.html" class="btn"
             >Leer más <i class="fas fa-angle-double-right"></i
           ></a>
         </div>
@@ -195,18 +207,18 @@
       <div class="footer-container">
         <ul>
           <li>
-            <a href="#"><h3>Tecnologías</h3></a>
+            <a href="recursos.html"><h3>Tecnologías</h3></a>
           </li>
-          <li><a href="#">HTML</a></li>
-          <li><a href="#">CSS</a></li>
-          <li><a href="#">JavaScript</a></li>
-          <li><a href="#">Samsung</a></li>
-          <li><a href="#">Flutter</a></li>
-          <li><a href="#">NodeJS</a></li>
+          <li><a href="recursos.html#html-curso">HTML</a></li>
+          <li><a href="articulos.html#css4-5">CSS</a></li>
+          <li><a href="recursos.html#js-curso">JavaScript</a></li>
+          <li><a href="recursos.html#samsung-curso">Samsung</a></li>
+          <li><a href="recursos.html#flutter-curso">Flutter</a></li>
+          <li><a href="recursos.html#nodejs-curso">NodeJS</a></li>
         </ul>
         <ul>
           <li>
-            <a href="#"><h3>Noticias</h3></a>
+            <a href="noticias.html"><h3>Noticias</h3></a>
           </li>
           <li><a href="noticias.html#internetarchive">Hackeo a Internet</a></li>
           <li><a href="noticias.html#google-espia">Google te espía</a></li>
@@ -219,25 +231,27 @@
         </ul>
         <ul>
           <li>
-            <a href="#"><h3>Contacto</h3></a>
+            <a href="contacto.html"><h3>Contacto</h3></a>
           </li>
-          <li><a href="#">Conócenos</a></li>
-          <li><a href="#">Facebook</a></li>
-          <li><a href="#">Youtube</a></li>
-          <li><a href="#">Linkedln</a></li>
-          <li><a href="#">Teléfono</a></li>
-          <li><a href="#">Instagram</a></li>
+          <li><a href="contacto.html">Conócenos</a></li>
+          <li><a href="contacto.html">Facebook</a></li>
+          <li><a href="contacto.html">Youtube</a></li>
+          <li><a href="contacto.html">Linkedln</a></li>
+          <li><a href="contacto.html">Teléfono</a></li>
+          <li><a href="contacto.html">Instagram</a></li>
         </ul>
         <ul>
           <li>
-            <a href="#"><h3>Acerca De</h3></a>
+            <a href="acercade.html"><h3>Acerca De</h3></a>
           </li>
-          <li><a href="#">Quiénes Somos</a></li>
-          <li><a href="#">Nuestros Valores</a></li>
-          <li><a href="#">Nuestro Propósito</a></li>
-          <li><a href="#">Nuestra Visión</a></li>
-          <li><a href="#">Nuestra Misión</a></li>
-          <li><a href="#">Nuestras Aspiraciones</a></li>
+          <li><a href="acercade.html#quienesomos">Quiénes Somos</a></li>
+          <li><a href="acercade.html#valores">Nuestros Valores</a></li>
+          <li><a href="acercade.html#proposito">Nuestro Propósito</a></li>
+          <li><a href="acercade.html#vision">Nuestra Visión</a></li>
+          <li><a href="acercade.html#mision">Nuestra Misión</a></li>
+          <li>
+            <a href="acercade.html#aspiraciones">Nuestras Aspiraciones</a>
+          </li>
         </ul>
       </div>
     </div>
