--- a/noticias.html
+++ b/noticias.html
@@ -75,12 +75,12 @@
             <p class="article-description">
               Google Chrome cuenta con un modo incógnito, igual que en el resto de navegadores. ¿Su función? Permitirnos navegar de forma privada, ya que al cerrar cualquier pestaña, los datos que se hayan registrado se eliminarán para siempre. Pero mucho nos tememos que es así.
               <br><br>
-Sí, Google confirma lo que todos sabíamos: te espía cuando usas el Modo Incógnito. Al punto de que la compañía con sede en Mountain View acaba de ser multada con 5.100 millones de euros por incumplir con la normativa de privacidad del Modo Incógnito.
-<br><br>
-De esta manera, Google seguía rastreando a los usuarios, al punto de que se estima que la gran G puede acceder al 94% de los sitios webs que ha visitado el usuario, viendo cookies y otros datos independientemente del modo incógnito.
-Sin revelarse aún la identidad de los atacantes ni el objetivo que estos persiguen con su actividad, los ataques se han sucedido durante varios días. Si el lunes por la tarde el portal se había recuperado, el martes por la mañana volvía a presentar fallos. "Desde que comenzaron los ataques el domingo, la intrusión DDoS ha lanzado decenas de miles de solicitudes de información falsa por segundo. Se desconoce el origen del ataque", afirman en un comunicado emitido este martes 28 de mayo. No hay actualización desde entonces.
-<br><br>
-No es la primera vez que sufre un problema grave. El año pasado sufrió una caída, y desde el perfil de Twitter de la web se afirmaba que el posible causante era una compañía de IA usando sus archivos para entrenamiento. Lo que se traduce también como un tráfico excesivo que sus servidores no pudieron soportar.
+              Sí, Google confirma lo que todos sabíamos: te espía cuando usas el Modo Incógnito. Al punto de que la compañía con sede en Mountain View acaba de ser multada con 5.100 millones de euros por incumplir con la normativa de privacidad del Modo Incógnito.
+              <br><br>
+              De esta manera, Google seguía rastreando a los usuarios, al punto de que se estima que la gran G puede acceder al 94% de los sitios webs que ha visitado el usuario, viendo cookies y otros datos independientemente del modo incógnito.
+              Sin revelarse aún la identidad de los atacantes ni el objetivo que estos persiguen con su actividad, los ataques se han sucedido durante varios días. Si el lunes por la tarde el portal se había recuperado, el martes por la mañana volvía a presentar fallos. "Desde que comenzaron los ataques el domingo, la intrusión DDoS ha lanzado decenas de miles de solicitudes de información falsa por segundo. Se desconoce el origen del ataque", afirman en un comunicado emitido este martes 28 de mayo. No hay actualización desde entonces.
+              <br><br>
+              No es la primera vez que sufre un problema grave. El año pasado sufrió una caída, y desde el perfil de Twitter de la web se afirmaba que el posible causante era una compañía de IA usando sus archivos para entrenamiento. Lo que se traduce también como un tráfico excesivo que sus servidores no pudieron soportar.
             </p>
           </div>
             <a href="index.html" class="btn-return ">
@@ -159,7 +159,60 @@ Además, para su análisis de seguridad también es más sencillo. Podríamos de
           <a href="index.html" class="btn-return ">
     <i class="fas fa-arrow-left"></i> Volver a Inicio
 </a>
-
+</div>
+<div class="footer-links">
+      <div class="footer-container">
+        <ul>
+          <li>
+            <a href="recursos.html"><h3>Tecnologías</h3></a>
+          </li>
+          <li><a href="recursos.html#html-curso">HTML</a></li>
+          <li><a href="articulos.html#css4-5">CSS</a></li>
+          <li><a href="recursos.html#js-curso">JavaScript</a></li>
+          <li><a href="recursos.html#samsung-curso">Samsung</a></li>
+          <li><a href="recursos.html#flutter-curso">Flutter</a></li>
+          <li><a href="recursos.html#nodejs-curso">NodeJS</a></li>
+        </ul>
+        <ul>
+          <li>
+            <a href="noticias.html"><h3>Noticias</h3></a>
+          </li>
+          <li><a href="noticias.html#internetarchive">Hackeo a Internet</a></li>
+          <li><a href="noticias.html#google-espia">Google te espía</a></li>
+          <li>
+            <a href="noticias.html#google-adblock">Google borra Adblockers</a>
+          </li>
+          <li><a href="noticias.html#windows10">Windows 10 morirá</a></li>
+          <li><a href="noticias.html#HarmonyOS">HarmonyOS Next</a></li>
+          <li><a href="noticias.html#Firefox">Firefox y su seguridad</a></li>
+        </ul>
+        <ul>
+          <li>
+            <a href="contacto.html"><h3>Contacto</h3></a>
+          </li>
+          <li><a href="contacto.html">Conócenos</a></li>
+          <li><a href="contacto.html">Facebook</a></li>
+          <li><a href="contacto.html">Youtube</a></li>
+          <li><a href="contacto.html">Linkedln</a></li>
+          <li><a href="contacto.html">Teléfono</a></li>
+          <li><a href="contacto.html">Instagram</a></li>
+        </ul>
+        <ul>
+          <li>
+            <a href="acercade.html"><h3>Acerca De</h3></a>
+          </li>
+          <li><a href="acercade.html#quienesomos">Quiénes Somos</a></li>
+          <li><a href="acercade.html#valores">Nuestros Valores</a></li>
+          <li><a href="acercade.html#proposito">Nuestro Propósito</a></li>
+          <li><a href="acercade.html#vision">Nuestra Visión</a></li>
+          <li><a href="acercade.html#mision">Nuestra Misión</a></li>
+          <li>
+            <a href="acercade.html#aspiraciones">Nuestras Aspiraciones</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <footer class="footer"><h3>WankaDev Copyright</h3></footer>
 
     <!-- SCROLL REVEAL (JAVASCRIPT) -->
     <script src="https://unpkg.com/scrollreveal"></script>
