--- a/recursos.html
+++ b/recursos.html
@@ -47,7 +47,204 @@
       </nav>
       <hr />
       <h1 class="text-center">RECURSOS DEV</h1>
+      <div class="box-article" id="html-curso">
+        <img
+          src="img/googlehtml.webp"
+          alt="GOOGLE Y HTML"
+          class="article-image"
+        />
+        <h3 class="article-title">
+          Google lanza un nuevo curso gratuito de HTML en línea para
+          principiantes
+        </h3>
+        <section class="article-description">
+          <p>
+            En el mundo actual, donde la presencia en línea es esencial para
+            cualquier negocio o profesional, el conocimiento de HTML se ha
+            vuelto fundamental. HTML, o Hypertext Markup Language, es el
+            lenguaje de marcado que sirve como base para construir páginas web
+            en Internet. Si alguna vez has sentido curiosidad por crear y
+            estructurar tus propias páginas web, Google tiene una emocionante
+            noticia para ti. Google, siempre a la vanguardia en el ámbito
+            tecnológico, ha desarrollado un curso gratuito que ofrece a todos
+            los interesados la oportunidad de aprender HTML de manera eficaz y
+            sencilla.
+          </p>
+          <br />
+          <h4>¿Por qué es importante aprender HTML?</h4>
+          <p>
+            El HTML es el lenguaje estándar utilizado para dar estructura a una
+            página web. Con él, se pueden definir elementos como encabezados,
+            párrafos, enlaces e imágenes, y organizarlos de manera coherente y
+            atractiva. Es el cimiento sobre el cual se construye toda la World
+            Wide Web y es esencial para cualquier persona interesada en tener
+            presencia en línea, ya sea para un negocio, un blog personal o una
+            página de portafolio. Aunque el curso “Learn HTML!” no ofrece
+            certificaciones formales, la oportunidad de aprender de expertos en
+            el campo es una invaluable adición a los conocimientos de cualquier
+            persona interesada en el desarrollo web.
+          </p>
+          <br />
+          <a href="https://web.dev/learn/html/" target="_blank"
+            ><b>Ir al Curso</b></a
+          >
+        </section>
+      </div>
+      <a href="index.html" class="btn-return">
+        <i class="fas fa-arrow-left"></i> Volver a Inicio
+      </a>
+      <div class="box-article" id="js-curso">
+        <img
+          src="img/javascriptcurso.webp"
+          alt="Curso de JS"
+          class="article-image"
+        />
+        <h3 class="article-title">
+          Aprende lo último de JavaScript (ES2023 & ES2024)
+        </h3>
+        <section class="article-description">
+          <p>
+            Aprende las últimas novedades del lenguaje de programación
+            JavaScript para subir de nivel.
+          </p>
+          <br />
+          <a
+            href="https://midu.dev/curso/aprende-lo-ultimo-de-javascript"
+            target="_blank"
+            ><b>Ir al Curso</b></a
+          >
+        </section>
+      </div>
+      <a href="index.html" class="btn-return">
+        <i class="fas fa-arrow-left"></i> Volver a Inicio
+      </a>
+      <div class="box-article" id="samsung-curso">
+        <img
+          src="img/samsung-curso.jpg"
+          alt="Curso de Samsung"
+          class="article-image"
+        />
+        <h3 class="article-title">
+          Samsung ha lanzado cursos gratuitos de programación y electrónica con
+          Certificación
+        </h3>
+        <section class="article-description">
+          <p>
+            Samsung ha tomado la iniciativa de brindar oportunidades educativas
+            sin precedentes a través de cursos gratuitos en línea con
+            certificación en campos clave como IoT, programación y electrónica.
+          </p>
+          <br />
+          <a href="https://codeiot.org.br/" target="_blank"
+            ><b>Ir al Curso</b></a
+          >
+        </section>
+      </div>
+      <a href="index.html" class="btn-return">
+        <i class="fas fa-arrow-left"></i> Volver a Inicio
+      </a>
+      <div class="box-article" id="flutter-curso">
+        <img
+          src="img/curso-flutter.png"
+          alt="Curso de Flutter"
+          class="article-image"
+        />
+        <h3 class="article-title">Curso: Flutter desde cero</h3>
+        <section class="article-description">
+          <p>
+            Domina la última versión de Flutter, el SDK de Google creado para
+            desarrollar aplicaciones móviles multiplataforma con rendimiento
+            nativo.
+          </p>
+          <br />
+          <a href="https://ed.team/cursos/flutter" target="_blank"
+            ><b>Ir al Curso</b></a
+          >
+        </section>
+      </div>
+      <a href="index.html" class="btn-return">
+        <i class="fas fa-arrow-left"></i> Volver a Inicio
+      </a>
+      <div class="box-article" id="nodejs-curso">
+        <img
+          src="img/curso-nodejs.jfif"
+          alt="Curso de NodeJS"
+          class="article-image"
+        />
+        <h3 class="article-title">Curso de Node.js</h3>
+        <section class="article-description">
+          <p>
+            Este curso de Node.js busca brindar a los estudiantes las
+            habilidades y conocimientos necesarios para convertirse en expertos
+            en el desarrollo de aplicaciones web y servidores de alta calidad.
+            Durante el curso, se cubrirán diversos temas relevantes y actuales
+            en el campo del desarrollo web con Node.js, lo que te permitirá
+            utilizar este entorno de manera efectiva para construir aplicaciones
+            web escalables y eficientes.
+          </p>
+          <br />
+          <a href="https://edutin.com/curso-de-node-js-3760" target="_blank"
+            ><b>Ir al Curso</b></a
+          >
+        </section>
+      </div>
+      <a href="index.html" class="btn-return">
+        <i class="fas fa-arrow-left"></i> Volver a Inicio
+      </a>
     </div>
+    <div class="footer-links">
+      <div class="footer-container">
+        <ul>
+          <li>
+            <a href="recursos.html"><h3>Tecnologías</h3></a>
+          </li>
+          <li><a href="recursos.html#html-curso">HTML</a></li>
+          <li><a href="articulos.html#css4-5">CSS</a></li>
+          <li><a href="recursos.html#js-curso">JavaScript</a></li>
+          <li><a href="recursos.html#samsung-curso">Samsung</a></li>
+          <li><a href="recursos.html#flutter-curso">Flutter</a></li>
+          <li><a href="recursos.html#nodejs-curso">NodeJS</a></li>
+        </ul>
+        <ul>
+          <li>
+            <a href="noticias.html"><h3>Noticias</h3></a>
+          </li>
+          <li><a href="noticias.html#internetarchive">Hackeo a Internet</a></li>
+          <li><a href="noticias.html#google-espia">Google te espía</a></li>
+          <li>
+            <a href="noticias.html#google-adblock">Google borra Adblockers</a>
+          </li>
+          <li><a href="noticias.html#windows10">Windows 10 morirá</a></li>
+          <li><a href="noticias.html#HarmonyOS">HarmonyOS Next</a></li>
+          <li><a href="noticias.html#Firefox">Firefox y su seguridad</a></li>
+        </ul>
+        <ul>
+          <li>
+            <a href="contacto.html"><h3>Contacto</h3></a>
+          </li>
+          <li><a href="contacto.html">Conócenos</a></li>
+          <li><a href="contacto.html">Facebook</a></li>
+          <li><a href="contacto.html">Youtube</a></li>
+          <li><a href="contacto.html">Linkedln</a></li>
+          <li><a href="contacto.html">Teléfono</a></li>
+          <li><a href="contacto.html">Instagram</a></li>
+        </ul>
+        <ul>
+          <li>
+            <a href="acercade.html"><h3>Acerca De</h3></a>
+          </li>
+          <li><a href="acercade.html#quienesomos">Quiénes Somos</a></li>
+          <li><a href="acercade.html#valores">Nuestros Valores</a></li>
+          <li><a href="acercade.html#proposito">Nuestro Propósito</a></li>
+          <li><a href="acercade.html#vision">Nuestra Visión</a></li>
+          <li><a href="acercade.html#mision">Nuestra Misión</a></li>
+          <li>
+            <a href="acercade.html#aspiraciones">Nuestras Aspiraciones</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <footer class="footer"><h3>WankaDev Copyright</h3></footer>
     <!-- SCROLL REVEAL (JAVASCRIPT) -->
     <script src="https://unpkg.com/scrollreveal"></script>
     <!-- CUSTOM JS -->
